<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PreferenceFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@color/black"
            android:src="@drawable/icon_back"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracion"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/ib_back"
            app:layout_constraintBottom_toBottomOf="@id/ib_back"
            app:layout_constraintStart_toEndOf="@+id/ib_back"/>

        <CheckBox
            android:id="@+id/cb_notificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/autorizar_notificaciones"
            app:layout_constraintTop_toBottomOf="@+id/ib_back"
            />
        <CheckBox
            android:id="@+id/cb_sonidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/activar_sonido"
            app:layout_constraintTop_toBottomOf="@+id/cb_notificaciones"
            />
        <fragment
            android:id="@+id/f_footer"
            android:name="com.misiontic.touristicsites.FooterFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </fragment>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>